--- a/newtab.html
+++ b/newtab.html
@@ -24,7 +24,7 @@
       bottom: 0 !important;
       width: 100vw !important;
       height: 100vh !important;
-      z-index: 2147483647 !important;
+      z-index: 5 !important;
     }
   </style>
 </head>
